--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 asgiref==3.7.2
+boto3==1.26.156
+botocore==1.29.156
 crispy-bootstrap4==2022.1
 dj-database-url==2.0.0
 Django==4.2.2
 django-crispy-forms==2.0
+django-storages==1.13.2
 gunicorn==20.1.0
+jmespath==1.0.1
 Pillow==9.5.0
 psycopg2-binary==2.9.6
+python-dateutil==2.8.2
 python-dotenv==1.0.0
+s3transfer==0.6.1
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.6.3
 tzdata==2023.3
+urllib3==1.26.16
